--- a/java-kb/TODO
+++ b/java-kb/TODO
@@ -1,2 +1,7 @@
 ObjectMapper
+http://stackoverflow.com/questions/26115076/producing-and-consuming-custom-json-objects-in-spring-restful-services
+
 Logger
+
+Jackson specifications
+http://wiki.fasterxml.com/JacksonFAQ
