--- a/java-kb/TODO
+++ b/java-kb/TODO
@@ -4,4 +4,10 @@ http://stackoverflow.com/questions/26115076/producing-and-consuming-custom-json-
 Logger
 
 Jackson specifications
-http://wiki.fasterxml.com/JacksonFAQ
+http://wiki.fasterxml.com/JacksonFAQ\\
+
+RequestMapping, ResponseBody
+http://stackoverflow.com/questions/30319813/jackson-serialize-multiple-objects-into-one
+
+GSON
+http://www.javacreed.com/simple-gson-example/
