--- a/java-kb/TODO
+++ b/java-kb/TODO
@@ -1,3 +1,8 @@
+
+Annotations
+
+Spring framework
+
 ObjectMapper
 http://stackoverflow.com/questions/26115076/producing-and-consuming-custom-json-objects-in-spring-restful-services
 
