--- a/java-kb/TODO
+++ b/java-kb/TODO
@@ -3,6 +3,10 @@ Annotations
 
 Spring framework
 
+Apache HttpClient
+http://stackoverflow.com/questions/1352949/preventing-httpclient-4-from-following-redirect
+http://stackoverflow.com/questions/1519392/how-to-prevent-apache-http-client-from-following-a-redirect
+
 ObjectMapper
 http://stackoverflow.com/questions/26115076/producing-and-consuming-custom-json-objects-in-spring-restful-services
 
