--- a/oracle-eus/DocId/SYSDBA-EUS-457083.1
+++ b/oracle-eus/DocId/SYSDBA-EUS-457083.1
@@ -30,63 +30,46 @@ Advanced Networking Option - Version 11.1.0.6 and later
 Information in this document applies to any platform.
 GOAL
 
-You want to implement the 11g new feature of configuring strong authentication for centralized management of your database administrators (SYSDBA and SYSOPER) login, in your existing EUS (Enterprise User Security) setup.
+You want to implement the 11g new feature of configuring strong authentication for centralized management of your 
+database administrators (SYSDBA and SYSOPER) login, in your existing EUS (Enterprise User Security) setup.
 
 SOLUTION
 
 Prerequisite
 
-This article assumes that you have a successful EUS (Enterprise User Security) setup already present wherein your 11g database successfully registered with the OID (Oracle Internet Directory) server.
-
- 
-
- 
+This article assumes that you have a successful EUS (Enterprise User Security) setup already present wherein your 
+11g database successfully registered with the OID (Oracle Internet Directory) server.
 
 Note:
-
 When using OVD  make sure that Patch 13866372 is installed on the RDBMS Server Oracle Home.
-
- 
-
- 
 
 
 Step 1: Create an Enterprise Role
 
-Launch ESM (Enterprise Security Manager) and connect to OID server. Navigate to Operations --> Create Enterprise Role in the menu options. 
-
-esm_menu_options
-
- 
+Launch ESM (Enterprise Security Manager) and connect to OID server. 
+Navigate to Operations --> Create Enterprise Role in the menu options. esm_menu_options
 
 
-
-
-
-Select the Realm and the Enterprise Domain. Give a name for Enterprise role. This enterprise role name can be any name of your choice.
+Select the Realm and the Enterprise Domain. Give a name for Enterprise role. 
+This enterprise role name can be any name of your choice.
 create role in esm
-
-
-
-
 
 
 Step 2: Grant Administrative privileges to the Enterprise Role
 
-You can grant administrative privileges SYSDBA or SYSOPER to the Enterprise Role manually using ODM (Oracle Directory Manager) or through ldapmodify command line utility.
-
+You can grant administrative privileges SYSDBA or SYSOPER to the Enterprise Role manually using ODM (Oracle Directory Manager) 
+or through ldapmodify command line utility.
 
 Using ODM,
 
 Navigate to the below entry using ODM, 
 cn=<Enterprise Role Name>,cn=<Enterprise Domain Name>,cn=OracleDBSecurity,cn=Products,cn=OracleContext,<Realm ID> 
 
-For the 'orclDBServerRole' attribute set the GlobalRole to be SYSDBA or SYSOPER according to what privilege you want to grant, in the below format. 
+For the 'orclDBServerRole' attribute set the GlobalRole to be SYSDBA or SYSOPER according to what privilege you want to grant, 
+in the below format. 
 cn=<DB SID>,cn=oraclecontext,<Realm ID>,GlobalRole=SYSDBA 
 
 assign global role
-
-
 
 
 Using ldapmodify,
@@ -128,27 +111,22 @@ DB SID is 'db11g'
 and the database privilege SYSDBA has been granted.
 
 
-
 Verify Enterprise Role
 
-Once granting the database administrative privileges is successful either via ODM or via ldapmodify , then you can see the privilege SYSDBA listed under Database Global Roles tab for the corresponding Enterprise Role in ESM.
+Once granting the database administrative privileges is successful either via ODM or via ldapmodify , 
+then you can see the privilege SYSDBA listed under Database Global Roles tab for the corresponding Enterprise Role in ESM.
 
 display sysdba in esm
 
-
-
-
-
-
 Step 3: Assigning the Enterprise Role to the Enterprise Users
 
-Using ESM, assign the Enterprise Role for which you have granted SYSDBA or SYSOPER privilege, to the Enterprise Users who require administrative privileges on the database. 
+Using ESM, assign the Enterprise Role for which you have granted SYSDBA or SYSOPER privilege, 
+to the Enterprise Users who require administrative privileges on the database. 
 
-Launch ESM, Select the Enterprise Role(that you configured in step1) on the left pane, on the right pane highlight Users tab. Click Add button and add the users.
+Launch ESM, Select the Enterprise Role(that you configured in step1) on the left pane, 
+on the right pane highlight Users tab. Click Add button and add the users.
 
 displays how to add users in esm
-
-
 
 Once successfully added, the users will be listed under the Users tab.
 
@@ -160,8 +138,8 @@ Step 4: Configure Database Parameter
 
 Set the database initialization parameter LDAP_DIRECTORY_SYSAUTH to YES to enable directory authentication for administrative users.
 
-Make sure that that parameter 'LDAP_DIRECTORY_ACCESS' is not set to 'NONE'. However, if you have a successful EUS setup this parameter would either be 'PASSWORD' or 'SSL' depending on your EUS configuration.
-
+Make sure that that parameter 'LDAP_DIRECTORY_ACCESS' is not set to 'NONE'. 
+However, if you have a successful EUS setup this parameter would either be 'PASSWORD' or 'SSL' depending on your EUS configuration.
 
 
 Step 5: Connect to the database
